--- a/templates/aws-tap-entrypoint-existing-vpc.template.yaml
+++ b/templates/aws-tap-entrypoint-existing-vpc.template.yaml
@@ -486,15 +486,15 @@ Parameters:
 Mappings:
   EKSClusterNames:
     Single:
-      Name: !Join ['-', ['cluster-eks-tap', !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
+      Name: cluster-eks-tap
     Run:
-      Name: !Join ['-', ['cluster-eks-tap-run', !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
+      Name: cluster-eks-tap-run
     View:
-      Name: !Join ['-', ['cluster-eks-tap-view', !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
+      Name: cluster-eks-tap-view
     Iterate:
-      Name: !Join ['-', ['cluster-eks-tap-iterate', !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
+      Name: cluster-eks-tap-iterate
     Build:
-      Name: !Join ['-', ['cluster-eks-tap-build', !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
+      Name: cluster-eks-tap-build
   Versions:
     current:
       TAP: 1.4.2
@@ -803,7 +803,7 @@ Resources:
         NodeInstanceFamily: Standard
         NodeGroupType: Managed
         NodeGroupOS: Amazon Linux 2
-        EKSClusterName: !FindInMap [ EKSClusterNames, Single, Name ]
+        EKSClusterName: !Join ['-', [!FindInMap [ EKSClusterNames, Single, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
         ClusterAutoScaler: Enabled
         LoadBalancerController: Enabled
         PerRegionSharedResources: 'No'
@@ -842,7 +842,7 @@ Resources:
         NodeInstanceFamily: Standard
         NodeGroupType: Managed
         NodeGroupOS: Amazon Linux 2
-        EKSClusterName: !FindInMap [ EKSClusterNames, Run, Name ]
+        EKSClusterName: !Join ['-', [!FindInMap [ EKSClusterNames, Run, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
         ClusterAutoScaler: Enabled
         LoadBalancerController: Enabled
         PerRegionSharedResources: 'No'
@@ -880,7 +880,7 @@ Resources:
         NodeInstanceFamily: Standard
         NodeGroupType: Managed
         NodeGroupOS: Amazon Linux 2
-        EKSClusterName: !FindInMap [ EKSClusterNames, View, Name ]
+        EKSClusterName: !Join ['-', [!FindInMap [ EKSClusterNames, View, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
         ClusterAutoScaler: Enabled
         LoadBalancerController: Enabled
         PerRegionSharedResources: 'No'
@@ -918,7 +918,7 @@ Resources:
         NodeInstanceFamily: Standard
         NodeGroupType: Managed
         NodeGroupOS: Amazon Linux 2
-        EKSClusterName: !FindInMap [ EKSClusterNames, Build, Name ]
+        EKSClusterName: !Join ['-', [!FindInMap [ EKSClusterNames, Build, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
         ClusterAutoScaler: Enabled
         LoadBalancerController: Enabled
         PerRegionSharedResources: 'No'
@@ -956,7 +956,7 @@ Resources:
         NodeInstanceFamily: Standard
         NodeGroupType: Managed
         NodeGroupOS: Amazon Linux 2
-        EKSClusterName: !FindInMap [ EKSClusterNames, Iterate, Name ]
+        EKSClusterName: !Join ['-', [!FindInMap [ EKSClusterNames, Iterate, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
         ClusterAutoScaler: Enabled
         LoadBalancerController: Enabled
         PerRegionSharedResources: 'No'
@@ -1374,19 +1374,19 @@ Resources:
                 Resource:
                   - !Sub
                       - arn:${AWS::Partition}:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterNameSingle}
-                      - EKSClusterNameSingle: !FindInMap [ EKSClusterNames, Single, Name ]
+                      - EKSClusterNameSingle: !Join ['-', [!FindInMap [ EKSClusterNames, Single, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
                   - !Sub
                       - arn:${AWS::Partition}:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterNameRun}
-                      - EKSClusterNameRun: !FindInMap [ EKSClusterNames, Run, Name ]
+                      - EKSClusterNameRun: !Join ['-', [!FindInMap [ EKSClusterNames, Run, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
                   - !Sub
                       - arn:${AWS::Partition}:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterNameBuild}
-                      - EKSClusterNameBuild: !FindInMap [ EKSClusterNames, Build, Name ]
+                      - EKSClusterNameBuild: !Join ['-', [!FindInMap [ EKSClusterNames, Build, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
                   - !Sub
                       - arn:${AWS::Partition}:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterNameIterate}
-                      - EKSClusterNameIterate: !FindInMap [ EKSClusterNames, Iterate, Name ]
+                      - EKSClusterNameIterate: !Join ['-', [!FindInMap [ EKSClusterNames, Iterate, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
                   - !Sub
                       - arn:${AWS::Partition}:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterNameView}
-                      - EKSClusterNameView: !FindInMap [ EKSClusterNames, View, Name ]
+                      - EKSClusterNameView: !Join ['-', [!FindInMap [ EKSClusterNames, View, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
               - Sid: DescribeEksAddons
                 Effect: Allow
                 Action:
@@ -2274,7 +2274,7 @@ Resources:
               IterateClusterWorkloadArn: !If [CreateMultiCluster, !GetAtt ITERATEWorkloadIamRole.Arn, ""]
               RunClusterName: !If [CreateMultiCluster, !GetAtt RUNEKSQSStack.Outputs.EKSClusterName, ""]
               ViewClusterName: !If [CreateMultiCluster, !GetAtt VIEWEKSQSStack.Outputs.EKSClusterName, ""]
-              EKSClusterName: !FindInMap [EKSClusterNames, Single, Name]
+              EKSClusterName: !Join ['-', [!FindInMap [ EKSClusterNames, Single, Name ], !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref AWS::StackId]]]]]]
               CloudInitHandle:          !Ref PhaseCloudInitHandle
               TAPInstallHandle:         !Ref PhaseTAPInstallHandle
               TAPWorkloadInstallHandle: !Ref PhaseTAPWorkloadInstallHandle
